TODO: share content and openshared